@@ -14,7 +14,7 @@ class Net::SSLeay::SSL_CTX {
   
   native method set_mode : long ($mode : long);
   
-  native method set_verify : int ($mode : int);
+  native method set_verify : void ($mode : int);
   
   native method get0_param : Net::SSLeay::X509_VERIFY_PARAM ();
   
